--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Playwrite+AU+SA&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.career-hub-title {
+    font-family: "Playwrite AU SA", serif;
+}
